fix: CSS-cars overflow and videoLopp+blackBg adjust

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,8 @@ body{
 .person-dying-left{
     /* top: 100%; */
     transform: 
-        translateY(12px)
+        translateY(50px)
+        translateX(10px)
         rotate(90deg) 
         /* translate(80em, -100em) */
         /* rotate(300deg) */
@@ -64,7 +65,8 @@ body{
 .person-dying-right{
     /* top: 100%; */
     transform: 
-        translateY(12px)
+        translateY(50px)
+        translateX(-10px)
         rotate(-90deg) 
         /* translate(80em, -100em) */
         /* rotate(300deg) */
@@ -212,10 +214,10 @@ body{
 .scoreboard-container__black-bg{
     z-index: 1999999995;
     position: absolute;
-    top: 0;
+    top: -3.2px;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: rgb(0, 0, 0)
 }
 @media (max-width: 500px){
     #micImgContainer{
@@ -259,6 +261,12 @@ body{
         left: 50%;
         transform: translate(-50%, 0);
         width: 68%;
+    }
+    .scoreboard-container__black-bg{
+        /*para cuando CAR sobresalen*/
+        left: -32%;
+        width: 155.5%;
+        /*para cuando CAR sobresalen*/
     }
 }
 /*horizontal*/
